App name and splash screen updated

--- a/app/src/main/res/drawable/splash_screen.xml
+++ b/app/src/main/res/drawable/splash_screen.xml
@@ -4,7 +4,7 @@
     <item android:drawable="@color/colorPrimary" />
 
     <item>
-        <bitmap android:src="@drawable/brand_logo"
+        <bitmap android:src="@drawable/ic_jetpack_hero"
             android:gravity="center" />
 
     </item>
