--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
 
     <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="android:windowBackground">@drawable/brand_logo</item>
+        <item name="android:windowBackground">@drawable/ic_jetpack_hero</item>
     </style>
 
 
