app migrated to android-x

--- a/app/src/main/res/layout/layout_movie_detail.xml
+++ b/app/src/main/res/layout/layout_movie_detail.xml
@@ -11,7 +11,7 @@
             type="com.codelife.dubizzle.model.MovieDetail" />
     </data>
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white">
@@ -93,7 +93,7 @@
             tools:text="@tools:sample/lorem/random" />
 
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
 
 
