--- a/app/src/main/res/layout/layout_item_movie.xml
+++ b/app/src/main/res/layout/layout_item_movie.xml
@@ -12,7 +12,7 @@
     </data>
 
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="5dp"
@@ -23,7 +23,7 @@
         app:cardElevation="5dp">
 
 
-        <android.support.constraint.ConstraintLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
@@ -77,9 +77,9 @@
                 tools:text="Year: 2001" />
 
 
-        </android.support.constraint.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </layout>
 
